initial custom recipe support